hphp/test/zend/bad/Zend/tests/generators/errors/yield_in_force_closed_finally_error.php
<?php

function gen() {
    try {
        echo "before yield\n";
        yield;
        echo "after yield\n";
    } finally {
        echo "before yield in finally\n";
        yield;
        echo "after yield in finally\n";
    }

    echo "after finally\n";
}

$gen = gen();
$gen->rewind();
unset($gen);

?>